# cmake-sample

src/: CMakeLists.txt  main_func.c
src/app/: CMakeLists.txt  app1.c  app2.c  app3.c
src/func/: CMakeLists.txt  func.c  func.h  func_unittest.c
